kubernetes/apps/services/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      enableServiceLinks: false
      containers:
        - name: gatus
          image: ghcr.io/twin/gatus:v5.37.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
      volumes:
        - name: config
          configMap:
            name: gatus-config
